// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a SearchBannerChevron When clicking the chevron twice, it should close it 1`] = `
<DocumentFragment>
  .c1 {
  display: inline;
  cursor: pointer;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  margin-bottom: 0.2rem;
}

@media (min-width:768px) {
  .c0 {
    display: none;
  }
}

<div
    class="c0"
  >
    <img
      class="c1"
      data-testid="plp-search-banner-chevron"
      src="/static-content/icons/shared/chevron.svg"
    />
  </div>
</DocumentFragment>
`;

exports[`Given a SearchBannerChevron When clicking the chevron, it should open it 1`] = `
<DocumentFragment>
  .c1 {
  display: inline;
  cursor: pointer;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  margin-bottom: 0.2rem;
}

@media (min-width:768px) {
  .c0 {
    display: none;
  }
}

<div
    class="c0"
  >
    <img
      class="c1"
      data-testid="plp-search-banner-chevron"
      src="/static-content/icons/shared/chevron.svg"
    />
  </div>
</DocumentFragment>
`;

exports[`Given a SearchBannerChevron should match the snapshot  1`] = `
<DocumentFragment>
  .c1 {
  display: inline;
  cursor: pointer;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  margin-bottom: 0.2rem;
}

@media (min-width:768px) {
  .c0 {
    display: none;
  }
}

<div
    class="c0"
  >
    <img
      class="c1"
      data-testid="plp-search-banner-chevron"
      src="/static-content/icons/shared/chevron.svg"
    />
  </div>
</DocumentFragment>
`;
